CVS: ----------------------------------------------------------------------


CVS: ----------------------------------------------------------------------
CVS: Enter Log.  Lines beginning with `CVS:' are removed automatically
CVS: 
CVS: Committing in .
CVS: 
CVS: Modified Files:
CVS: 	JWindowMenu.java 
CVS: ----------------------------------------------------------------------



v20030630:  -org.softsmithy.lib.awt.layout.InfiniteTableLayout bug fix with 
             preferredSize 
            -org.softsmithy.lib.beans.XDefaultPersistenceDelegate work around
             for a bug in java.beans.DefaultPersistenceDelegate when used eg. 
             with unsigned applets
            -org.softsmithy.lib.beans.XMLEncoderX uses 
             org.softsmithy.lib.beans.XDefaultPersistenceDelegate for Color and
             Font
            -org.softsmithy.lib.swing.JMultiSplitPane now supports 
             org.softsmithy.lib.swing.event.DividerLocationListener
            -some minor changes
v20030616:  -i18n updates
            -some bugs in org.softsmithy.lib.swing.JHtmlCustomizer removed
            -org.softsmithy.lib.swing.JXTextField, 
             org.softsmithy.lib.swing.table.PanelTableCellRenderer and 
             org.softsmithy.lib.swing.table.TextFieldTableCellRenderer added
            -some minor changes
v20030523:  -org.softsmithy.lib.swing.JHtmlCustomizer bug fixes for foreground
             and font
            -org.softsmithy.lib.swing.HorizontalAlignment supports conversions 
             to javax.swing.text.StyleConstants
            -org.softsmithy.lib.swing.XActions now sets a transparent icon if 
             icon is null
            -org.softsmithy.lib.swing.JXPanel added which has a backgroundPaint
             property
v20030514:  -org.softsmithy.lib.beans.BeanIntrospector now supports 
             PropertyChangeListeners
            -org.softsmithy.lib.swing.JCustomizer + 
             org.softsmithy.lib.swing.customizer.StateManager +